--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,4 +4,16 @@
        Article One | Shatabdi Basu
      </title>
  </head>
+     <div>
+         <a href='/'>Home</a>
+     </div>
+     <hr/>
+     
+     <h3>
+        Article One 
+     </h3>
+     <div>
+        <p>This article is for technical stuffs </p>
+     </div>
+
 </html>
