[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -13,7 +13,7 @@
         Article One 
      </h3>
      <div>
-        <p>This article is for technical stuffs </p>
+        <p>This article is for technical stuffs.This article is for technical stuffs. </p>
      </div>
 
 </html>
