[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
        Article One | Shatabdi Basu
      </title>
  </head>
+ <body>
      <div>
          <a href='/'>Home</a>
      </div>
@@ -15,5 +16,5 @@
      <div>
         <p>This article is for technical stuffs.This article is for technical stuffs. </p>
      </div>
-
+</body>
 </html>
