--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
  <head>
      <title> 
-       Article One | Shatabdi Basu
+       Article Two | Shatabdi Basu
      </title>
  </head>
  <body>
@@ -11,9 +11,11 @@
      <hr/>
      
      <h3>
-        Article One 
+        Article Two
      </h3>
      <div>
+        <p>This article is for technical stuffs.This article is for technical stuffs. </p>
+        <p>This article is for technical stuffs.This article is for technical stuffs. </p>
         <p>This article is for technical stuffs.This article is for technical stuffs. </p>
      </div>
 </body>
