[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
  <head>
      <title> 
-       Article Two | Shatabdi Basu
+       Article One | Shatabdi Basu
      </title>
  </head>
  <body>
@@ -11,7 +11,7 @@
      <hr/>
      
      <h3>
-        Article Two
+        Article One
      </h3>
      <div>
         <p>This article is for technical stuffs.This article is for technical stuffs. </p>
